--- a/projects/red-button/package.json
+++ b/projects/red-button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "red-button",
+  "name": "@rimtasdede/red-button",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^13.3.0",
