npm-publish fix

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,9 @@ jobs:
           node-version: 16
           #registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: cd dist/red-button
+
+      - name: Publish
+        working-directory: ./dist/red-button
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
