--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,9 +31,8 @@ jobs:
           node-version: 16
           #registry-url: https://registry.npmjs.org/
       - run: npm ci
-
       - name: Publish
         working-directory: ./dist/red-button
-      - run: npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
