--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'projects/red-button'
+    path: 'projects/red-button'
 
 jobs:
   build:
