--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,7 +40,7 @@ jobs:
       # - run: npm ci
 
       - name: Download build
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v3
         with:
           name: dist
           path: dist
