--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,12 +37,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # - name: Install node
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
+      - name: Install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       # - run: npm ci
 
       - name: Download build
