--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      # - run: npm ci
+      - run: npm ci
 
       - name: Download build
         uses: actions/download-artifact@v3
